--- a/apps/desktop/src/features/explorer/styles/tree-label.css
+++ b/apps/desktop/src/features/explorer/styles/tree-label.css
@@ -1,4 +1,20 @@
 .inner-label {
 	display: flex;
 	align-items: center;
+	gap: 4px;
+	margin: 0 10px;
+	width: 100%;
+	border-radius: var(--mantine-radius-xs);
+
+	/* Padding */
+	padding: 2px 0;
+	padding-right: var(--mantine-spacing-xs);
+	padding-left: 4px;
+
+	&[data-hovered] {
+		background-color: var(--mantine-color-dark-5);
+	}
+	&[data-selected] {
+		background-color: alpha(var(--mantine-color-blue-9), 0.5);
+	}
 }
