--- a/apps/desktop/src/features/explorer/styles/tree-label.css
+++ b/apps/desktop/src/features/explorer/styles/tree-label.css
@@ -2,8 +2,7 @@
 	display: flex;
 	align-items: center;
 	gap: 4px;
-	margin: 0 10px;
-	width: 100%;
+	margin-right: 10px;
 	border-radius: var(--mantine-radius-xs);
 
 	/* Padding */
@@ -17,4 +16,9 @@
 	&[data-selected] {
 		background-color: alpha(var(--mantine-color-blue-9), 0.5);
 	}
+}
+
+.outer-label {
+	margin-left: 10px;
+	width: 100dvw;
 }
