--- a/apps/desktop/src/features/explorer/styles/ExplorerTree.module.css
+++ b/apps/desktop/src/features/explorer/styles/ExplorerTree.module.css
@@ -3,6 +3,8 @@
 	height: 100%;
 	overscroll-behavior: none;
 	margin-right: 1px;
+	padding-top: calc(var(--spacing) * 2);
+	padding-bottom: calc(var(--spacing) * 4);
 }
 
 .node {
@@ -15,7 +17,7 @@
 	align-items: center;
 	text-overflow: ellipsis;
 	gap: calc(var(--spacing) * 1);
-	padding-right: calc(var(--spacing) * 2);
+	padding-right: calc(var(--spacing) * 4);
 	width: 100%;
 	cursor: default;
 	padding-top: calc(var(--spacing) * 1);
