--- a/apps/desktop/src/features/explorer/styles/ExplorerTree.module.css
+++ b/apps/desktop/src/features/explorer/styles/ExplorerTree.module.css
@@ -1,8 +1,8 @@
 .root {
 	overflow: auto;
+	scrollbar-width: thin;
 	height: 100%;
 	overscroll-behavior: none;
-	margin-right: 1px;
 	padding-top: calc(var(--spacing) * 2);
 	padding-bottom: calc(var(--spacing) * 4);
 }
@@ -15,7 +15,6 @@
 .label {
 	display: flex;
 	align-items: center;
-	text-overflow: ellipsis;
 	gap: calc(var(--spacing) * 1);
 	padding-right: calc(var(--spacing) * 4);
 	width: 100%;
