--- a/apps/desktop/src/features/workspace/styles/TableView.module.css
+++ b/apps/desktop/src/features/workspace/styles/TableView.module.css
@@ -1,6 +1,6 @@
 .tableWrapper {
 	background-color: var(--mantine-color-dark-9);
-	height: 100%;
+	width: 100%;
 	overflow: auto;
 	scrollbar-width: thin;
 	padding-bottom: 100px;
