feat: ux improvements

--- a/apps/desktop/src/features/workspace/styles/Tabs.module.css
+++ b/apps/desktop/src/features/workspace/styles/Tabs.module.css
@@ -7,6 +7,9 @@
 .list {
 	background-color: var(--mantine-color-dark-9);
 	border: none;
+	flex-wrap: nowrap;
+	overflow: auto;
+	scrollbar-width: none;
 
 	&::before {
 		content: none;
