feat: Query excution & Result View

--- a/apps/desktop/src/App.css
+++ b/apps/desktop/src/App.css
@@ -23,7 +23,8 @@ html {
 
 @theme {
 	--font-mono: "JetBrains Mono", monospace;
-	/* ... */
+	/* Custom variables */
+	--postgresql: #679ac5;
 }
 
 :root {
