--- a/apps/desktop/src/App.css
+++ b/apps/desktop/src/App.css
@@ -37,7 +37,24 @@ html {
 
 .scrollable {
 	overflow: auto;
-	scrollbar-width: thin;
-	transition: scrollbar-color 0.2s ease;
+	scrollbar-gutter: stable;
 	overscroll-behavior: none;
+}
+
+.scrollable::-webkit-scrollbar {
+	width: 4px;
+	height: 4px;
+}
+
+.scrollable::-webkit-scrollbar-thumb {
+	background-color: var(--mantine-color-dark-5);
+	border-radius: 2px;
+}
+
+.scrollable::-webkit-scrollbar-thumb:hover {
+	background-color: var(--mantine-color-dark-4);
+}
+
+.scrollable::-webkit-scrollbar-track {
+	background-color: transparent;
 }
