feat: SSL/TLS support

--- a/apps/desktop/src/App.css
+++ b/apps/desktop/src/App.css
@@ -32,6 +32,7 @@ html {
 		--mantine-color-body: var(--mantine-color-dark-8);
 		--mantine-color-default-border: var(--mantine-color-dark-9);
 		--mantine-color-error: var(--mantine-color-red-4);
+		--mantine-primary-color-filled: var(--mantine-color-blue-5);
 	}
 }
 
